# AsterIDE

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  TODO.md  flake.nix
.github/workflows/: build.yml
crates/command_palette/: Cargo.toml
crates/command_palette/src/: lib.rs
crates/editor/: Cargo.toml
crates/editor/src/: Icon.swift  main.rs  tabs.rs
crates/editor/src/settings/: mod.rs
crates/search/: Cargo.toml
crates/search/src/: lib.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs
crates/tabs/: Cargo.toml
crates/tabs/src/: lib.rs
crates/theme/: Cargo.toml
crates/theme/src/: lib.rs
nix/: buildPackage.nix  devShell.nix  formatter.nix
scripts/: build.sh
